1Annee/tob/tps/.svn/pristine/fc/fc78db81ffcc2bd5daef819ff641675969148ab8.svn-base
./allumettes/Joueur.java:18: error: unreported exception CoupInvalideException; must be caught or declared to be thrown
	  return this.strategie.getPrise(jeu);
	                                ^
1 error
